--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "n8n-nodes-bigin",
-    "version": "0.1.0",
+    "name": "@dative-gpi/n8n-nodes-bigin",
+    "version": "1.0.0",
     "description": "n8n community node for Zoho Bigin",
     "license": "MIT",
     "homepage": "https://github.com/Dative-GPI/n8n-nodes-bigin.git",
