--- a/.github/workflows/n8n-release.yml
+++ b/.github/workflows/n8n-release.yml
@@ -22,5 +22,5 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run lint
-      - run: npm version ${GITHUB_REF_NAME#v} --no-git-tag-version
-      - run: npm publish
+      - run: npm version --new-version ${{ github.ref_name }} --no-git-tag-version
+      - run: npm publish --access public
