--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "build": "n8n-node build",
         "build:watch": "tsc --watch",
         "dev": "n8n-node dev",
-        "start": "n8n start",
+        "start": "npm run build && n8n start",
         "lint": "n8n-node lint",
         "lint:fix": "n8n-node lint --fix",
         "release": "n8n-node release"
